added ncls to scge

--- a/docker-scge/Dockerfile
+++ b/docker-scge/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:focal-20221130
 
 LABEL version="1.0"
-LABEL description="Image with basic bioinformatics tools plus joblib for machine learning"
+LABEL description="Image for running SCGE off-target analysis with joblib for machine learning"
 
 ENV DEBIAN_FRONTEND=noninteractive
 
@@ -22,7 +22,6 @@ RUN apt-get update -y && apt-get install -y --no-install-recommends \
     ncurses-dev \
     nodejs \
     pkg-config \
-    rsync \
     unzip \
     wget \
     zip \
@@ -32,18 +31,11 @@ RUN apt-get update -y && apt-get install -y --no-install-recommends \
     bc \
     curl \
     tzdata \
-    emacs \
     gawk \
     openssh-client \
     grep \
     evince \
     libnss-sss \
-    default-jdk \
-    default-jre \
-    git-lfs \
-    smbclient \
-    groff \
-    mailutils \
     && apt-get clean all
 
 #set timezone to CDT
@@ -57,19 +49,7 @@ RUN cd /tmp && mkdir -p $CONDA_DIR && \
     wget "https://github.com/conda-forge/miniforge/releases/download/24.3.0-0/Mambaforge-24.3.0-0-Linux-x86_64.sh" && \
     bash Mambaforge-24.3.0-0-Linux-x86_64.sh -f -b -p $CONDA_DIR && \
     rm -f Mambaforge-24.3.0-0-Linux-x86_64.sh && \
-    $CONDA_DIR/bin/mamba install -y --channel conda-forge --channel bioconda python=3.11 numpy joblib scikit-learn bcftools==1.21 htslib==1.21 samtools==1.21 pandas bedtools=2.31 pybedtools openpyxl scipy cython cyvcf2 pysam statsmodels pyranges pybigwig globus-cli nf-core nextflow==24.04.4 SQLAlchemy biotite pyodbc pybigtools bigtools vcftools && \
+    $CONDA_DIR/bin/mamba install -y --channel conda-forge --channel bioconda python=3.11 numpy joblib scikit-learn bcftools==1.21 htslib==1.21 samtools==1.21 pandas openpyxl scipy cython pysam statsmodels pyranges biotite pyodbc ncls && \
     $CONDA_DIR/bin/conda clean -y --all && \
     ln -s /opt/conda/bin/* /usr/local/bin/
 
-RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
-    unzip awscliv2.zip && ./aws/install
-
-##################
-# ucsc utilities #
-RUN mkdir -p /tmp/ucsc && \
-    cd /tmp/ucsc && \
-    wget http://hgdownload.soe.ucsc.edu/admin/exe/linux.x86_64/bedGraphToBigWig http://hgdownload.soe.ucsc.edu/admin/exe/linux.x86_64/bedToBigBed http://hgdownload.soe.ucsc.edu/admin/exe/linux.x86_64/bigBedToBed http://hgdownload.soe.ucsc.edu/admin/exe/linux.x86_64/bigWigAverageOverBed http://hgdownload.soe.ucsc.edu/admin/exe/linux.x86_64/bigWigToBedGraph http://hgdownload.soe.ucsc.edu/admin/exe/linux.x86_64/wigToBigWig && \
-    chmod ugo+x * && \
-    mv * /usr/local/bin/
-    
-ENV PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
