new scge w/ different htslib install

--- a/docker-scge/Dockerfile
+++ b/docker-scge/Dockerfile
@@ -46,25 +46,53 @@ RUN ln -sf /usr/share/zoneinfo/America/Chicago /etc/localtime
 RUN echo "America/Chicago" > /etc/timezone
 RUN dpkg-reconfigure --frontend noninteractive tzdata
 
+##############
+#HTSlib 1.18#
+##############
+ENV HTSLIB_INSTALL_DIR=/opt/htslib
+
 WORKDIR /tmp
-RUN wget https://github.com/samtools/htslib/releases/download/1.21/htslib-1.21.tar.bz2 && \
-    tar -xjvf htslib-1.21.tar.bz2 && \
-    cd htslib-1.21 && \
-    ./configure --prefix=/usr/local && make -j4 && make install && \
-    cd .. && \
-    \
-    wget https://github.com/samtools/samtools/releases/download/1.21/samtools-1.21.tar.bz2 && \
-    tar -xjvf samtools-1.21.tar.bz2 && \
-    cd samtools-1.21 && \
-    ./configure --prefix=/usr/local --with-htslib=system && make -j4 && make install && \
-    cd .. && \
-    \
-    wget https://github.com/samtools/bcftools/releases/download/1.21/bcftools-1.21.tar.bz2 && \
-    tar -xjvf bcftools-1.21.tar.bz2 && \
-    cd bcftools-1.21 && \
-    ./configure --prefix=/usr/local --with-htslib=system && make -j4 && make install && \
-    cd .. && \
-    rm -rf htslib-1.21* samtools-1.21* bcftools-1.21*
+RUN wget --no-check-certificate https://github.com/samtools/htslib/releases/download/1.18/htslib-1.18.tar.bz2 && \
+    tar --bzip2 -xvf htslib-1.18.tar.bz2 && \
+    cd /tmp/htslib-1.18 && \
+    ./configure  --enable-plugins --prefix=$HTSLIB_INSTALL_DIR && \
+    make && \
+    make install && \
+    cp $HTSLIB_INSTALL_DIR/lib/libhts.so* /usr/lib/ && \
+    ln -s $HTSLIB_INSTALL_DIR/bin/tabix /usr/bin/tabix && \
+    ln -s $HTSLIB_INSTALL_DIR/bin/bgzip /usr/bin/bgzip && \
+    rm -Rf /tmp/htslib-1.18
+
+################
+#Samtools 1.18#
+################
+ENV SAMTOOLS_INSTALL_DIR=/opt/samtools
+
+WORKDIR /tmp
+RUN wget --no-check-certificate https://github.com/samtools/samtools/releases/download/1.18/samtools-1.18.tar.bz2 && \
+    tar --bzip2 -xf samtools-1.18.tar.bz2 && \
+    cd /tmp/samtools-1.18 && \
+    ./configure --with-htslib=$HTSLIB_INSTALL_DIR --prefix=$SAMTOOLS_INSTALL_DIR && \
+    make && \
+    make install && \
+    ln -s /opt/samtools/bin/* /usr/local/bin/ && \
+    cd / && \
+    rm -rf /tmp/samtools-1.18
+
+################
+#bcftools 1.18#
+################
+ENV BCFTOOLS_INSTALL_DIR=/opt/bcftools
+WORKDIR /tmp
+RUN wget --no-check-certificate https://github.com/samtools/bcftools/releases/download/1.18/bcftools-1.18.tar.bz2 && \
+    tar --bzip2 -xf bcftools-1.18.tar.bz2 && \
+    cd /tmp/bcftools-1.18 && \
+    make prefix=$BCFTOOLS_INSTALL_DIR && \
+    make prefix=$BCFTOOLS_INSTALL_DIR install && \
+    ln -s /opt/bcftools/bin/* /usr/local/bin/ && \
+    cd / && \
+    rm -rf /tmp/bcftools-1.18
+    
 
 # 3. Install Python Packages via PIP
 # Note: We upgrade pip first to ensure binary wheels are found (speeding up build)
@@ -74,6 +102,7 @@ RUN pip install --no-cache-dir --upgrade pip && \
     joblib \
     scikit-learn \
     pandas \
+    pyranges \
     openpyxl \
     scipy \
     cython \
